--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.3.0
   fluttertoast: ^8.2.4
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
