--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   sqflite: ^2.3.0
   fluttertoast: ^8.2.4
   provider: ^6.1.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
