--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   fluttertoast: ^8.2.4
   provider: ^6.1.1
   intl: ^0.18.1
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -23,9 +24,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/animation/
 
   # fonts:
   #   - family: Schyler
